force-app/main/default/objects/Contact/fields/dateFroumla__c.field-meta.xml
<CustomField>
    <fullName>dateFroumla__c</fullName>
    <formula>IF((MONTH(Birthdate ) + (12*(YEAR(Birthdate )-YEAR(Date__c )) - MONTH(Date__c ))) == 1, Today(), Today()+3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dateFroumla</label>
    <type>Date</type>
</CustomField>