force-app/main/default/objects/Contact/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <formula>MailingCity + MailingCountry + MailingState + MailingStreet + MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted_Address</label>
    <type>Text</type>
</CustomField>