force-app/main/default/objects/Contact/fields/Total_Trailhead_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Trailhead_Badges__c</fullName>
    <label>Total Trailhead Badges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>