force-app/main/default/objects/Contact/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <externalId>true</externalId>
    <label>UID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>